--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,27 +1,32 @@
 {
-    "AppDescription": {
-        "en": "A playlist generator for festivals"
-    },
-    "AppIcon": {
-        "36x18": "assets/icon36x18.png",
-        "64x64": "assets/icon64x64.png",
-        "128x128": "assets/icon128x128.png"
-    },
-    "AppName": {
-        "en": "Festival Playlists"
-     },
-    "BundleIdentifier": "festival-playlists",
-    "BundleType": "Application",
-    "BundleVersion": "0.0.4",
-    "RequiredPermissions": [
-        "http://festivalplaylists.com"
-    ],
-    "SupportedLanguages": [
-        "en"
-    ],
-    "VendorIdentifier": "com.festivalplaylists",
-    "Dependencies": {
-        "api": "1.0.0",
-        "views": "1.0.0"
-    }
+  "AppDescription": {
+    "en": "A playlist generator for festivals"
+  },
+  "AppIcon": {
+    "18x18": "images/icons/icon-18x18.png",
+    "36x18": "images/icons/icon-36x18.png",
+    "32x32": "images/icons/icon-32x32.png",
+    "64x64": "images/icons/icon-64x64.png",
+    "128x128": "images/icons/icon-128x128.png",
+    "300x300": "images/icons/icon-300x300.png"
+  },
+  "AppName": {
+    "en": "Festival Playlists"
+  },
+  "BundleIdentifier": "festival-playlists",
+  "BundleType": "Application",
+  "BundleVersion": "0.0.1",
+  "Dependencies": {
+    "api": "1.0.0",
+    "views": "1.10.0"
+  },
+  "RequiredPermissions": [],
+  "SupportedDeviceClasses": [
+    "Web",
+    "Desktop"
+  ],
+  "SupportedLanguages": [
+    "en"
+  ],
+  "VendorIdentifier": "com.thecourtsofchaos"
 }
